apps/redlib/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redlib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redlib
  template:
    metadata:
      labels:
        app: redlib
    spec:
      containers:
        - name: redlib
          image: "quay.io/redlib/redlib:latest@sha256:c1fcda90dca9447d4aa7e18fd3ef85cc2044c29263490159e1ae4b472d0f285c"
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsUser: 65534
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
