apps/redlib/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redlib
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: redlib
