apps/redlib/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redlib
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redlib.kube.dev.cturner.xyz`)
      kind: Rule
      services:
        - name: redlib
          port: 8080
  tls: {}
